# NepaliGov-RAG-Bench

./: .gitignore  CP11_ENHANCEMENT_REPORT.md  CP3_ENHANCEMENTS_SUMMARY.md  Dockerfile  Dockerfile.docs  ENHANCEMENT_SUMMARY.md  EXECUTION_GUIDE.md  Makefile  README.md  create_real_corpus.py  development_log.txt  docker-build.sh  docker-compose.yml  docker-run.sh  dynamic_search.py  enhanced_web_app.py  extract_pdf_titles.py  fix_translation.py  fixed_nepal_gov_api.py  force_reload_corpus.py  launch_web.sh  mkdocs.yml  nepal_gov_api.py  nepal_gov_ui.py  process_latest_cv.py  process_uploaded_cv.py  pyproject.toml  requirements.txt  run_api.py  run_enhanced.py  run_ui.py  run_with_reload.py  simple_web_app.py  start_app.py  start_system.py  working_api.py
api/: __init__.py  app.py  enhanced_app.py  simple_app.py  translation.py
config/: cp10_thresholds.yaml  cp11_5_ui_translation.yaml  cp6_synonyms.json  cp9_mappings.json
data/: pdf_titles.json  proper_manual_qacite.jsonl
docs/: architecture.md  configuration.md  faq.md  index.md  installation.md  overview.md  quickstart.md  troubleshooting.md
ops/: cron_ingest.py  lineage_index.py  safety_monitor.py
prompts/: qacite.md
scripts/: add_url.py
src/: Phase 1: Project Initialization (November 1-15, 2024)_add_feature.py  Phase 1: Project Initialization (November 1-15, 2024)_enhanced_handler.py  Phase 1: Project Initialization (November 1-15, 2024)_refactored_service.py  __init__.py  api-documentation_modify_enhancement.py  api-endpoints_add_module.py  api-endpoints_modify_enhancement.py  ci-cd_refactor_refactor.py  (+23 more)
(+39 files in other folders)
