[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-gov-rag-bench"
version = "1.0.0"
description = "Nepali Government RAG Benchmark System"
authors = [
    {name = "aayushmalla13", email = "aayushmalla56@gmail.com"},
    {name = "shijalsharmapoudel", email = "shijalsharmapoudel@gmail.com"},
    {name = "babin411", email = "j.babin411@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "streamlit>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "faiss-cpu>=1.7.0",
    "pydantic>=1.8.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
    "tqdm>=4.62.0",
    "pytest>=6.2.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
